# tradingbot

./: .env.example  .gitignore  README.md  bot.sh  bot_all.sh  bot_arb.sh  bot_btc.sh  bot_eth.sh  bot_stock.sh  bot_us.sh  bot_xrp.sh  diag_api.py  pyproject.toml  requirements.txt  run_alert_bot.py  run_arb.py  run_backtest.py  run_backtest_local.py  run_learn.py  run_stock.py  run_swing_backtest.py  run_trader.py  run_us.py
config/: settings.py
src/: main.py
src/api/: kis_client.py
src/arbitrage/: __init__.py  detector.py
src/backtest/: __init__.py  backtest_engine.py  engine.py
src/cross_arb/: __init__.py  arb_engine.py
src/exchange/: __init__.py  upbit_client.py
src/exchanges/: __init__.py  base_exchange.py  ccxt_exchange.py  exchange_factory.py  upbit_exchange.py
src/execution/: engine.py
src/indicators/: __init__.py  advanced.py  technical.py
src/intelligence/: __init__.py  correlation.py  market_sentiment.py  trade_learner.py
src/kr_stock/: __init__.py  alert_bot.py  data_fetcher.py  fear_greed_index.py  watchlist.py
src/monitor/: __init__.py  fx_rate.py  price_monitor.py
src/risk/: manager.py  portfolio_heat.py
src/stock/: __init__.py  investor_flow.py  kis_client.py  stock_engine.py  us_engine.py  watchlist.py
src/strategies/: __init__.py  adaptive.py  base.py  base_strategy.py  bollinger.py  (+10 more)
tests/: test_arbitrage.py  test_backtest.py  test_execution.py  test_fear_greed.py  test_fx_rate.py  test_indicators.py  test_kis_client.py  test_models.py  test_price_monitor.py  test_risk.py  test_stock.py  test_strategies.py  test_trader.py
(+19 files in other folders)
